# CodeCat

./: .gitignore  .gitmodules  CMakeLists.txt  package-lock.json  package.json  settings.gradle.kts
Assets/UI/: Home.xml  Project.xml
Assets/css/: editor.css  home.css  root.css
back-end/: CMakeLists.txt
back-end/AuthCat/: CMakeLists.txt
back-end/AuthCat/include/: AuthCat.hpp
back-end/AuthCat/src/: AuthCat.cpp  User.cpp
back-end/AuthCat/tests/: HTTPLibTest.cpp
back-end/include/: AcceptorThread.hpp  ClientThread.hpp  CodeCat.hpp  FrontEndThread.hpp
back-end/src/: AcceptorThread.cpp  ClientThread.cpp  FrontEndThread.cpp  main.cpp
back-end/test/: ClientTest.cpp  ServerTest.cpp
front-end/: package.json  tsconfig.json
front-end/UI/: index.html
front-end/UI/components/: Footer.html  Header.html  Login.html
front-end/src/: App.ts  index.ts  page.ts
front-end/src/client/: root.ts
front-end/src/pages/: root.ts
front-end/src/types/: AuthCatSSOReply.ts  User.ts
include/CodeCat/: CodeCat.h  Editor.h  Home.h  UIFiles.h
src/: app.d.ts  app.html  editor.c  home.c  main.c
src/lib/: User.ts
src/routes/: +layout.svelte
